# qwen2api-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dev/: ARCHITECTURE.md  DEPLOY.md  LATENCY.md  PROTOCOL.md  UPSTREAM.md  accounts.example.json
dev/captures/: sse_fast_answer.txt  sse_thinking_answer.txt
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  media.rs  state.rs  stats.rs  util.rs
src/account/: account.rs  mod.rs  pool.rs
src/api/: admin.rs  anthropic.rs  embeddings.rs  files.rs  gemini.rs  images.rs  mod.rs  models.rs  openai.rs  probes.rs  responses.rs  videos.rs
src/context/: file_store.rs  mod.rs  oss.rs
src/execution/: formatters.rs  mod.rs  presenter.rs  translator.rs  visible_text.rs
src/request/: client_profiles.rs  mod.rs  model_catalog.rs  model_modes.rs  prompt_builder.rs  standard.rs
src/toolcall/: mod.rs  obfuscation.rs
src/upstream/: chat_id_pool.rs  client.rs  executor.rs  mod.rs  payload.rs  sse.rs  ssxmod.rs
web/: app.js  index.html  style.css
zeabur-proxy/: Dockerfile  ZEABUR.md  config.yaml  entrypoint.sh
