[package]
name = "qwen2api-rs"
version = "2.0.0"
edition = "2021"
description = "Rust 重寫的 qwen2API 企業網關：將 Qwen Web 偽裝成 OpenAI/Anthropic/Gemini 相容介面"

[[bin]]
name = "qwen2api-rs"
path = "src/main.rs"

[dependencies]
# Web 框架 / 非同步
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "set-header"] }
hyper = "1"

# HTTP 客戶端（連 Qwen 上游）：rustls + http2 + stream
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "gzip", "charset", "socks"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 串流 / future
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"

# 工具
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
percent-encoding = "2"
urlencoding = "2"

# token 計算
tiktoken-rs = "0.6"

# 統計資料庫（嵌入式 SQLite，bundled 自帶 sqlite 原始碼編譯，免外部依賴）
rusqlite = { version = "0.31", features = ["bundled"] }

# 設定 / 日誌 / 錯誤
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
regex = "1"
once_cell = "1"
arc-swap = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
